Anathema can now be started from the IDE even if it the path to the repository contains a space character.